# lightdash-pre-commit-hooks

./: .pre-commit-hooks.yaml  Makefile  README.md  pyproject.toml  setup.py
.cursor/rules/: development-tools.mdc  generated-code-protection.mdc
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: test.yml  trunk_upgrade.yml
.trunk/: trunk.yaml
dev/: build.sh  generate_parsers.sh  setup.sh  test_python.sh
docs/: design.md
resources/schemas/: README.md  lightdash-dbt-2.0.json  lightdash-dbt-2.5.json
src/lightdash_pre_commit/hooks/: base.py  check_duplicate_dimensions_and_metrics.py  check_duplicate_dimensions_and_metrics_v1.py  check_duplicate_dimensions_and_metrics_v2.py  utils.py
src/lightdash_pre_commit/models/: lightdash_dbt_2_0.py
src/lightdash_pre_commit/parsers/: base.py  lightdash_dbt_2_0.py  lightdash_dbt_2_5.py
tests/: __init__.py
tests/lightdash_pre_commit/: test_dummy.py  utils.py
tests/lightdash_pre_commit/hooks/: test_check_duplicate_dimensions_and_metrics.py  test_check_duplicate_dimensions_and_metrics_v1.py  test_check_duplicate_dimensions_and_metrics_v2.py
tests/lightdash_pre_commit/hooks/fixtures/check_duplicate_dimensions_and_metrics/: duplicate_metric_vs_additional_dimension.yml  mixed_meta_columns.yml
tests/lightdash_pre_commit/hooks/fixtures/check_duplicate_dimensions_and_metrics_v1/: duplicate_across_metric_and_dimension.yml  duplicate_column_vs_additional_dimension.yml  duplicate_within_dimensions.yml  duplicate_within_metrics.yml  mixed_meta_columns.yml  multiple_duplicates.yml  no_meta_columns.yml  unique_names.yml
tests/lightdash_pre_commit/hooks/fixtures/check_duplicate_dimensions_and_metrics_v2/: duplicate_across_metric_and_dimension.yml  duplicate_column_vs_additional_dimension.yml  duplicate_metric_vs_additional_dimension.yml  duplicate_within_dimensions.yml  duplicate_within_metrics.yml  empty_model.yml  multiple_duplicates.yml  unique_names.yml
tests/lightdash_pre_commit/models/: test_lightdash_dbt_2_0.py  test_lightdash_dbt_2_5.py
tests/lightdash_pre_commit/models/fixtures/dbt_1_10/: simple_model.yml
tests/lightdash_pre_commit/models/fixtures/lightdash_dbt_2_0/: simple_model.yml
